# homemade_chatgpt

backend/: app.py  db.sqlite  pyproject.toml  test.py
backend/src/: __init__.py
backend/src/api/auth/: dependencies.py  routes.py  schemas.py  utils.py
backend/src/api/chat/: routes.py  schemas.py
backend/src/api/db/models/: chat.py  user.py
backend/src/api/resources/: chat_manager.py  user_manager.py
backend/src/api/resources/llm_core/: data_models.py
backend/src/api/settings/: configs.py
backend/src/auth/: routes.py  schemas.py  utils.py
backend/src/db/models/: user.py
backend/src/models/: conversation.py  user.py
backend/src/resources/: login.py  settings.py  user_manager.py
backend/src/routes/: conversation.py  user.py
